--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -195,47 +195,50 @@
     <!-- Resutlts Page  -->
 
     <div class="results-page">
-      <div class="results-head">
-        <h2>Stunning Results</h2>
-        <p>Just look to the statistics we have generate the past years</p>
-      </div>
-
-      <div class="results-body">
-        <div class="statistics">
-          <div class="circle">
-            <img src="./assets/images/74-percent.png" class="percent" />
-          </div>
-          <div class="details">
-            <h3>Total conversion</h3>
-            <p>
-              The past few year have seen a dramatic change in the public
-              perception of cosmetic surgery
-            </p>
-          </div>
+      <div class="container">
+        <div class="results-head">
+          <h2>Stunning Results</h2>
+          <p>Just look to the statistics we have generate the past years</p>
         </div>
 
-        <div class="statistics">
-          <div class="circle">
-            <img src="./assets/images/39-percent.png" class="percent" />
+        <div class="results-body">
+          <div class="statistics">
+            <div class="circle">
+              <img src="./assets/images/74-percent.png" class="percent" />
+            </div>
+            <div class="details">
+              <h3>Total conversion</h3>
+              <p>
+                The past few year have seen a dramatic change in the public
+                perception of cosmetic surgery
+              </p>
+            </div>
           </div>
-          <div class="details">
-            <h3>Free download</h3>
-            <p>
-              Can you image what we will be downloading in another twenty years?
-            </p>
-          </div>
-        </div>
 
-        <div class="statistics">
-          <div class="circle">
-            <img src="./assets/images/81-percent.png" class="percent" />
+          <div class="statistics">
+            <div class="circle">
+              <img src="./assets/images/39-percent.png" class="percent" />
+            </div>
+            <div class="details">
+              <h3>Free download</h3>
+              <p>
+                Can you image what we will be downloading in another twenty
+                years?
+              </p>
+            </div>
           </div>
-          <div class="details">
-            <h3>Unique vistitors</h3>
-            <p>
-              WordPress, the premier free open-source bloging utility, has gone
-              through serveral upgrades in its life
-            </p>
+
+          <div class="statistics">
+            <div class="circle">
+              <img src="./assets/images/81-percent.png" class="percent" />
+            </div>
+            <div class="details">
+              <h3>Unique vistitors</h3>
+              <p>
+                WordPress, the premier free open-source bloging utility, has
+                gone through serveral upgrades in its life
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -245,30 +248,36 @@
 
     <!-- Form Page -->
     <div class="form-page">
-      <div class="form-head">
-        <h2>Create An Account</h2>
+      <div class="container">
+        <div class="form-head">
+          <h2>Create An Account</h2>
+        </div>
+        <form class="form">
+          <h3>Sign up</h3>
+          <div class="inputBox">
+            <input type="email" class="input" placeholder="Email" />
+          </div>
+
+          <div class="inputBox">
+            <input type="password" class="input" placeholder="Password" />
+          </div>
+
+          <div class="inputBox">
+            <input
+              type="password"
+              class="input"
+              placeholder="Confirm Password"
+            />
+          </div>
+
+          <div class="has-account">
+            <a href="javascript:void(0)">Already have an account ?</a>
+          </div>
+          <div class="sign-up-btn">
+            <button type="button" class="signup-btn">Sign up</button>
+          </div>
+        </form>
       </div>
-      <form class="form">
-        <h3>Sign up</h3>
-        <div class="inputBox">
-          <input type="email" class="input" placeholder="Email" />
-        </div>
-
-        <div class="inputBox">
-          <input type="password" class="input" placeholder="Password" />
-        </div>
-
-        <div class="inputBox">
-          <input type="password" class="input" placeholder="Confirm Password" />
-        </div>
-
-        <div class="has-account">
-          <a href="javascript:void(0)">Already have an account ?</a>
-        </div>
-        <div class="sign-up-btn">
-          <button type="button" class="signup-btn">Sign up</button>
-        </div>
-      </form>
     </div>
 
     <!-- End Form Page -->
