Add BEM naming convention to plan-page

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -43,73 +43,73 @@
     </div>
 
     <!-- Subcribing Page -->
-    <div class="sub-plan">
+    <div class="plan-page">
       <div class="container">
-        <div class="sub-plan-header">
+        <div class="plan__header">
           <h2>Subcribing Plans</h2>
         </div>
 
-        <div class="sub-plan-content">
-          <div class="price">
-            <div class="freemium">
+        <div class="plan__content">
+          <div class="plan__price">
+            <div class="plan__freemium">
               <h2>Freemium</h2>
               <h3>0</h3>
             </div>
-            <div class="desciption">
+            <div class="plan__details">
               <p>Basic Collection 10 Messages 50 images per Day</p>
             </div>
-            <div class="get-started">
+            <div class="plan__btn">
               <a href="javascript:void(0)" class="btn-get-started">
                 Get started
               </a>
             </div>
           </div>
 
-          <div class="price">
-            <div class="start-up">
+          <div class="plan__price">
+            <div class="plan__start-up">
               <h2>Start up</h2>
               <h3>9</h3>
             </div>
-            <div class="desciption">
+            <div class="plan__details">
               <p>Basic Collection 100 Messages 100 images per Day</p>
             </div>
-            <div class="get-started">
+            <div class="plan__btn">
               <a href="javascript:void(0)" class="btn-get-started">
                 Get started
               </a>
             </div>
           </div>
 
-          <div class="price">
-            <div class="business">
+          <div class="plan__price">
+            <div class="plan__business">
               <h2>Business</h2>
               <h3>29</h3>
             </div>
-            <div class="desciption">
+            <div class="plan__details">
               <p>
                 Unlimited Collection 500 Messages 300 images per Day Project
                 Reviews
               </p>
             </div>
-            <div class="get-started">
-              <a href="javascript:void(0)" class="btn-get-started"
-                >Get started</a
-              >
+            <div class="plan__btn">
+              <a href="javascript:void(0)" class="btn-get-started">
+                Get started
+              </a>
             </div>
           </div>
 
-          <div class="price">
-            <div class="enterprise">
+          <div class="plan__price">
+            <div class="plan__enterprise">
               <h2>Enterprise</h2>
               <h3>49</h3>
             </div>
-            <div class="desciption">
+            <div class="plan__details">
               <p>
                 Unlimited Collection Unlimited Messages Unlimited images per Day
                 Project Reviews
               </p>
             </div>
-            <div class="get-started">
+            <div class="plan__btn">
               <a href="javascript:void(0)" class="btn-get-started">
                 Get started
               </a>
