Add BEM naming convention to feature-page

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -122,24 +122,24 @@
     <!-- Feature Page -->
 
     <div class="feature-page">
-      <div class="feature-header">
+      <div class="feature__header">
         <h2>Features</h2>
         <h3>We're taking it to the next level</h3>
       </div>
-      <div class="feature-body">
+      <div class="feature__body">
         <!-- Feature-content -->
 
-        <div class="feature-content">
+        <div class="feature__content">
           <!-- Responsive layout -->
 
-          <div class="feature-param">
-            <div class="icon">
-              <a href="javascript:void(0)"
-                ><img src="./assets/images/responsive-icon.png"
-              /></a>
+          <div class="feature__param">
+            <div class="feature__icon">
+              <a href="javascript:void(0)">
+                <img src="./assets/images/responsive-icon.png" />
+              </a>
             </div>
 
-            <div class="feature-details">
+            <div class="feature__details">
               <h4>Responsive layout</h4>
               <p>
                 The past few years have seen a dramatic change in the public
@@ -150,13 +150,13 @@
 
           <!-- Pixel perfect -->
 
-          <div class="feature-param">
-            <div class="icon">
-              <a href="javascript:void(0)"
-                ><img src="./assets/images/diamond-icon.png"
-              /></a>
+          <div class="feature__param">
+            <div class="feature__icon">
+              <a href="javascript:void(0)">
+                <img src="./assets/images/diamond-icon.png" />
+              </a>
             </div>
-            <div class="feature-details">
+            <div class="feature__details">
               <h4>Pixel perfect</h4>
               <p>
                 About 64% of all on-line teens say that do things online that
@@ -167,13 +167,13 @@
 
           <!-- Organized layers -->
 
-          <div class="feature-param">
-            <div class="icon">
-              <a href="javascript:void(0)"
-                ><img src="./assets/images/layers-icon.png"
-              /></a>
+          <div class="feature__param">
+            <div class="feature__icon">
+              <a href="javascript:void(0)">
+                <img src="./assets/images/layers-icon.png" />
+              </a>
             </div>
-            <div class="feature-details">
+            <div class="feature__details">
               <h4>Organized layers</h4>
               <p>
                 Are you on of the thousands of iPhone owners who has no idea
@@ -183,7 +183,7 @@
           </div>
         </div>
 
-        <div class="macbook-img">
+        <div class="feature__macbook-img">
           <img class="macbook" src="./assets/images/mac.png" alt="macbook" />
         </div>
       </div>
