Add BEM naming convention to results-page

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -195,17 +195,17 @@
 
     <div class="results-page">
       <div class="container">
-        <div class="results-head">
+        <div class="results__head">
           <h2>Stunning Results</h2>
           <p>Just look to the statistics we have generate the past years</p>
         </div>
 
-        <div class="results-body">
-          <div class="statistics">
-            <div class="circle">
+        <div class="results__body">
+          <div class="results__content">
+            <div class="results__circle">
               <img src="./assets/images/74-percent.png" class="percent" />
             </div>
-            <div class="details">
+            <div class="results__details">
               <h3>Total conversion</h3>
               <p>
                 The past few year have seen a dramatic change in the public
@@ -214,11 +214,11 @@
             </div>
           </div>
 
-          <div class="statistics">
-            <div class="circle">
+          <div class="results__content">
+            <div class="results__circle">
               <img src="./assets/images/39-percent.png" class="percent" />
             </div>
-            <div class="details">
+            <div class="results__details">
               <h3>Free download</h3>
               <p>
                 Can you image what we will be downloading in another twenty
@@ -227,11 +227,11 @@
             </div>
           </div>
 
-          <div class="statistics">
-            <div class="circle">
+          <div class="results__content">
+            <div class="results__circle">
               <img src="./assets/images/81-percent.png" class="percent" />
             </div>
-            <div class="details">
+            <div class="results__details">
               <h3>Unique vistitors</h3>
               <p>
                 WordPress, the premier free open-source bloging utility, has
