Add BEM naming convention to form-page

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -248,20 +248,20 @@
     <!-- Form Page -->
     <div class="form-page">
       <div class="container">
-        <div class="form-head">
+        <div class="form__header">
           <h2>Create An Account</h2>
         </div>
         <form class="form">
           <h3>Sign up</h3>
-          <div class="input-box">
+          <div class="form__input-box">
             <input type="email" class="input" placeholder="Email" />
           </div>
 
-          <div class="input-box">
+          <div class="form__input-box">
             <input type="password" class="input" placeholder="Password" />
           </div>
 
-          <div class="input-box">
+          <div class="form__input-box">
             <input
               type="password"
               class="input"
@@ -269,10 +269,10 @@
             />
           </div>
 
-          <div class="has-account">
+          <div class="form__link">
             <a href="javascript:void(0)">Already have an account ?</a>
           </div>
-          <div class="sign-up-btn">
+          <div class="form__signup-btn">
             <button type="button" class="signup-btn">Sign up</button>
           </div>
         </form>
