Add BEM naming convention to footer

--- a/practice-2/src/index.html
+++ b/practice-2/src/index.html
@@ -284,23 +284,23 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <ul class="social-icon">
+      <ul class="footer__icon">
         <li class="printerest"><i class="fa-brands fa-pinterest"></i></li>
         <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
         <li class="facebook"><i class="fa-brands fa-facebook"></i></li>
       </ul>
       <hr class="hr-line" />
-      <div class="outtro">
+      <div class="footer__des">
         <p>
           Hoffman UI Kit was made to help you quickly create beautiful layouts
           of responsive websites.
         </p>
       </div>
-      <div class="email">
+      <div class="footer__email">
         <input type="email" class="email-box" placeholder="Email" />
         <button type="button" class="sub-btn">subcribe</button>
       </div>
-      <ul class="info">
+      <ul class="footer__info">
         <li><a href="javascript:void(0)">Hotels</a></li>
         <li><a href="javascript:void(0)">Services</a></li>
         <li><a href="javascript:void(0)">Arilines</a></li>
@@ -308,13 +308,13 @@
         <li><a href="javascript:void(0)">Find more</a></li>
       </ul>
 
-      <div class="contact">
+      <div class="footer__contact">
         <p>606-965-2811</p>
         <p>8194 Ullrich Groves Suite 986</p>
         <p>592 Missouri Park Suite 818</p>
       </div>
 
-      <div class="copy-right">
+      <div class="footer__copy-right">
         <p>Copyright © 2016 Goldenfox</p>
       </div>
     </footer>
